# caelvid

./: .gitignore  Pipfile  README.md  pyproject.toml
configuration/: config.yaml  log_configuration.yaml
docker/: detect_single_object.Dockerfile
notebooks/: yolo_introduction.ipynb  yolov8_experimentation.ipynb
object_detection/yolo/configuration/: config.yaml  log_configuration.yaml
object_detection/yolo/docker/: detect_single_object.Dockerfile
object_detection/yolo/modules/logging_module/: logging_module.py
object_detection/yolo/modules/object_detection/: object_detection.py  object_detection_utils.py
object_detection/yolo/modules/pytest_test/: test_object_detection.py  test_utils.py  test_utils_fixtures.py
object_detection/yolo/modules/utils/: utils.py
object_detection/yolo/notebooks/: decode_image_numpy.ipynb  yolo_introduction.ipynb
src/logging_module/: logging_module.py
src/object_detection/: object_detection.py  object_detection_rest_api.py  object_detection_utils.py
src/object_detection_yolov3/: object_detection.py  object_detection_rest_api.py  object_detection_utils.py
src/pytest_test/: test_fixtures.py  test_object_detection.py  test_object_detection_yolov3.py  test_rest_api.py  test_utils.py  test_utils_fixtures.py
src/test/: test_object_detection_yolov3.py  test_utils.py
src/tests/: test_fixtures.py  test_object_detection_yolov3.py  test_utils.py
src/utils/: utils.py
