[tool.poetry]
name = "caelvid"
version = "0.1.0"
description = "It is a library including several computer vision models"
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
pyyaml = "^6.0"
opencv-python = "^4.7.0.68"
fastapi = {extras = ["all"], version = "^0.89.1"}
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
