[tool.poetry]
name = "caelvid"
version = "0.1.0"
description = "It is a library including several computer vision models"
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "util"}
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
logging = "^0.4.9.6"
pyyaml = "^6.0"
opencv-python = "^4.7.0.68"
fastapi = {extras = ["all"], version = "^0.89.1"}
pytest = "^7.2.1"
ultralytics = "^8.0.32"
jupyterlab = "^3.6.1"
ipywidgets = "^8.0.4"
jupyterlab-widgets = "^3.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
