[tool.poetry]
name = "caelvid"
version = "0.1.0a2"
description = "It is a library including several computer vision models"
authors = ["Simone Porreca <porrecasimone@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "object_detection_yolov3", from = 'src'}
]

[tool.poetry.dependencies]
python = "3.10.5"
opencv-python = "^4.7.0.72"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
logging = "^0.4.9.6"
pytest = "^7.2.2"
setuptools = "^67.6.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
ipywidgets = "^8.0.6"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"